Bug 253523 - [IFC][Partial layout] InlineInvalidation should not take InlineFormattingState
Summary: [IFC][Partial layout] InlineInvalidation should not take InlineFormattingState
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-07 11:01 PST by zalan
Modified: 2023-03-09 06:13 PST (History)
5 users (show)

See Also:


Attachments
Patch (9.91 KB, patch)
2023-03-07 11:03 PST, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (9.91 KB, patch)
2023-03-08 21:40 PST, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-03-07 11:01:48 PST
ssia
Comment 1 zalan 2023-03-07 11:03:06 PST
Created attachment 465342 [details]
Patch
Comment 2 zalan 2023-03-08 21:40:12 PST
Created attachment 465369 [details]
[fast-cq]Patch
Comment 3 EWS 2023-03-09 06:12:26 PST
Committed 261428@main (8e73af84b11d): <https://commits.webkit.org/261428@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465369 [details].
Comment 4 Radar WebKit Bug Importer 2023-03-09 06:13:16 PST
<rdar://problem/106497766>